src/objects/Vendor_Temp_Stop__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Vendor Temp Stops</relationshipLabel>
        <relationshipName>Vendor_Temp_Stops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <label>Subscription (Vendor)</label>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Vendor Temp Stops</relationshipLabel>
        <relationshipName>Vendor_Temp_Stops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Temp_Stop__c</fullName>
        <label>Temp Stop</label>
        <referenceTo>Temp_Stop__c</referenceTo>
        <relationshipLabel>Vendor Temp Stops</relationshipLabel>
        <relationshipName>Vendor_Temp_Stops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Sub_Temp_Stop_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Sub Temp Stop Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vendor Temp Stop</label>
    <nameField>
        <displayFormat>VTS-{0000000000}</displayFormat>
        <label>Vendor Temp Stop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Temp Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>